# xpit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  exp_director.py  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: doc.yml  test.yml
docs/: getting_started.md  index.md
docs/community/: help.md  index.md
docs/reference/api/: index.md
docs/reference/encodings/: index.md
examples/eventsched/: art_event.lp  eventschedule.lp  explain.py  readme.md
examples/misc/: distr_by_request.py  explain.py  test.lp  test2.lp
examples/tag_filtering/: explain_certain_tags.py  filtering_over_arguments.py  sophisticated_arguments.py
examples/unsat/: ex1.lp  ex2.lp  ex3.lp  ex4.lp  explain.py  explain_ex1.py  explain_ex2.py  explain_ex3.py
resources/: art_event_orig.lp  explainables.lp  simple.lp
src/explanation_director_prototype/: __init__.py  __main__.py  exp_director.py
src/explanation_director_prototype/utils/: logging.py
src/explanation_directory_prototype/: __init__.py  __main__.py  exp_director.py
src/explanation_directory_prototype/utils/: logging.py  parser.py
src/xpit/: __init__.py  __main__.py
src/xpit/definitions/: __init__.py  define.py
src/xpit/director/: __init__.py  director.py
src/xpit/explainer/: __init__.py  base.py  program.py
src/xpit/utils/: __init__.py  parser.py
tests/: test_main.py  utils.py
tests/explanation_director/: test_exp_dir.py  test_main.py
tests/explanation_director/res/: not_a_of_x.lp
tests/xpit/: test_director.py  test_main.py  test_program_explainer.py  test_tag_id_filter.py
tests/xpit/res/: dupl_ids.lp  ex1.lp  not_a_of_x.lp  sat1.lp
