[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "explanation_directory_prototype"
authors = [{ name = "Orkunt Sabuncu", email = "orkunt.sabuncu@potassco.com" },
            { name= "Christoph Glinzer", email = "christoph.glinzer@potassco.com"}]
description = "A template project."
requires-python = ">=3.13"
license = { file = "LICENSE" }
dynamic = ["version"]
readme = "README.md"
dependencies = [
    "clingexplaid>=1.4.0",
    "clingo>=5.8,<6.0"
]

[project.urls]
Homepage = "https://github.com/PotasscoSolutions/explanation-director-prototype.git"

[project.optional-dependencies]
format = ["black", "isort", "autoflake"]
lint_pylint = ["pylint"]
typecheck = ["types-setuptools", "mypy"]
test = ["coverage[toml]", "pytest>=8.3.4",]
doc = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "mkdoclingo"]
dev = ["explanation_directory_prototype[test,typecheck,lint_pylint]"]

[project.scripts]
explanation_directory_prototype = "explanation_directory_prototype.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 10
max-attributes = 7
max-bool-expr = 5
max-branches = 12
max-locals = 30
max-parents = 7
max-public-methods = 20
max-returns = 10
max-statements = 50
min-public-methods = 1

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true

[tool.pylint.basic]
argument-rgx = "^[a-z][a-z0-9]*((_[a-z0-9]+)*_?)?$"
variable-rgx = "^[a-z][a-z0-9]*((_[a-z0-9]+)*_?)?$"
good-names = ["_"]

[tool.coverage.run]
source = ["explanation_directory_prototype", "tests"]
omit = ["*/explanation_directory_prototype/__main__.py"]

[tool.coverage.report]
exclude_lines = ["assert", "nocoverage"]

[tool.mypy]
exclude = ["build", "resources", "site", "noxfile.py"]
strict = true
